<resources>
    <string name="app_name">TeuxDeux</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="teuxdeux">TeuxDeux</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="enter_email_address_and_password_prompt">Enter email address and password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">SUBMIT</string>
    <string name="home">Home</string>
    <string name="notes">Notes</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello home fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_settings_fragment">Hello settings fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_todo_fragment">Hello todo fragment</string>
    <string name="hello_calendar_fragment">Hello calendar fragment</string>
    <string name="todo">todo</string>
    <string name="switch_to_dark_mode">Switch to dark mode:</string>
    <string-array name="task_types">
        <item></item>
        <item>Personal</item>
        <item>Household</item>
        <item>Groceries</item>
        <item>Finance</item>
        <item>Medical</item>
        <item>School</item>
        <item>Work</item>
    </string-array>
</resources>